// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnorderedList renders StyledUl with given display prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-block;
}

<ul
    class="emotion-0"
  >
    first nodesecond nodethird node
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders default StyledUl 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<ul
    class="emotion-0"
  >
    first nodesecond nodethird node
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders different types of children 1`] = `
<DocumentFragment>
  .emotion-16 {
  margin: 0;
  padding: 0;
  display: block;
}

.emotion-2 {
  list-style: none;
}

.emotion-2:last-child + div {
  margin: 0;
}

.emotion-1 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-8 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-8.emotion-8 {
  width: 16px;
  height: 16px;
}

.emotion-12 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
}

.emotion-12 svg {
  fill: #0a68c1;
}

.emotion-12:hover:not(:disabled) {
  color: #02509b;
}

.emotion-12:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-12:active:not(:disabled) {
  color: #01396e;
}

.emotion-12:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-12:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-12:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-12 {
    vertical-align: text-bottom;
  }
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

<ul
    class="emotion-16"
  >
    <li
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <p
          class="emotion-0"
        >
          String node
        </p>
      </div>
    </li>
    <li
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <p
          class="emotion-0"
        >
          100
        </p>
      </div>
    </li>
    <li
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <p
          class="emotion-0"
        >
          <a
            class="emotion-12"
            href="http://localhost:6006"
          >
            <span
              class="emotion-11"
            >
              <span
                class="emotion-7"
              >
                <span
                  class="emotion-6"
                >
                  Link component
                </span>
              </span>
              <span
                class="emotion-7"
              >
                <svg
                  class="emotion-8 emotion-9"
                  fill="currentColor"
                  focusable="false"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    External link
                  </title>
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                  />
                </svg>
              </span>
            </span>
          </a>
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with custom list item marker 1`] = `
<DocumentFragment>
  .emotion-18 {
  margin: 0;
  padding: 0;
  display: block;
}

.emotion-5 {
  list-style: none;
}

.emotion-5:last-child + div {
  margin: 0;
}

.emotion-4 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-2 {
  margin-right: 8px;
  color: #2e2e2e;
}

.emotion-2 svg {
  fill: #2e2e2e;
}

.emotion-2 svg,
.emotion-2 img {
  display: block;
}

.emotion-0 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-0.emotion-0 {
  width: 8px;
  height: 8px;
}

<ul
    class="emotion-18"
  >
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          aria-hidden="true"
          class="emotion-2"
        >
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-3"
        >
          first node
        </p>
      </div>
    </li>
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          aria-hidden="true"
          class="emotion-2"
        >
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-3"
        >
          second node
        </p>
      </div>
    </li>
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          aria-hidden="true"
          class="emotion-2"
        >
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-3"
        >
          third node
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with custom list item marker with different size 1`] = `
<DocumentFragment>
  .emotion-18 {
  margin: 0;
  padding: 0;
  display: block;
}

.emotion-5 {
  list-style: none;
}

.emotion-5:last-child + div {
  margin: 0;
}

.emotion-4 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-2 {
  margin-right: 8px;
  color: #2e2e2e;
}

.emotion-2 svg {
  fill: #2e2e2e;
}

.emotion-2 svg,
.emotion-2 img {
  display: block;
}

.emotion-0 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-0.emotion-0 {
  width: 16px;
  height: 16px;
}

<ul
    class="emotion-18"
  >
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          aria-hidden="true"
          class="emotion-2"
        >
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-3"
        >
          first node
        </p>
      </div>
    </li>
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          aria-hidden="true"
          class="emotion-2"
        >
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-3"
        >
          second node
        </p>
      </div>
    </li>
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          aria-hidden="true"
          class="emotion-2"
        >
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-3"
        >
          third node
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with defaults 1`] = `
<DocumentFragment>
  .emotion-9 {
  margin: 0;
  padding: 0;
  display: block;
}

.emotion-2 {
  list-style: none;
}

.emotion-2:last-child + div {
  margin: 0;
}

.emotion-1 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<ul
    class="emotion-9"
  >
    <li
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <p
          class="emotion-0"
        >
          first node
        </p>
      </div>
    </li>
    <li
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <p
          class="emotion-0"
        >
          second node
        </p>
      </div>
    </li>
    <li
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <p
          class="emotion-0"
        >
          third node
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with defaults when marker is incorrect 1`] = `
<DocumentFragment>
  .emotion-9 {
  margin: 0;
  padding: 0;
  display: block;
}

.emotion-2 {
  list-style: none;
}

.emotion-2:last-child + div {
  margin: 0;
}

.emotion-1 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<ul
    class="emotion-9"
  >
    <li
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <p
          class="emotion-0"
        >
          first node
        </p>
      </div>
    </li>
    <li
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <p
          class="emotion-0"
        >
          second node
        </p>
      </div>
    </li>
    <li
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <p
          class="emotion-0"
        >
          third node
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
